--- a/scss/layouts/_footer-bottom.scss
+++ b/scss/layouts/_footer-bottom.scss
@@ -6,12 +6,10 @@
 
 .footer-bottom-box {
     background-color: $background-secondary; // Sets the colour using a pre defined variable.
-    color: $white; // Sets the colour using a pre defined variable.
+    color: $footer-bottom-text-colour; // Sets the colour using a pre defined variable.
     font-size: .8125rem; // Sets the size of the font.
-    line-height: 1.42857142rem; // Used to set the distance between lines of text.
-    margin: 0;
     padding-top: 10px; // Creates space between its content and its border.
-    padding-bottom: 10px; // Creates space between its content and its border.
+    padding-bottom: 15px; // Creates space between its content and its border.
     
     ul {
         padding-left: 0;
@@ -20,6 +18,11 @@
     .license-3 {        
         margin-right: 10px;
     }
+}
+
+.footer-bottom-container {
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .row-group {
@@ -44,11 +47,6 @@
 }
 
 //////// Footer Bottom FlexBox ////////
-
-.footer-bottom-box {
-    display: flex; // Makes the flex items Block Level.
-    flex: 1;
-}
 
 .footer-bottom-column {
     display: flex; // Makes the flex items Block Level.
