--- a/scss/layouts/_middle.scss
+++ b/scss/layouts/_middle.scss
@@ -73,9 +73,13 @@ p {
     padding: 10px 30px; // Creates extra space within an element.
     border-radius: 6px; // Rounds the corners of an element's outer border edge.
     border: 1px solid transparent; // Allow me to specify the style, width, and color of an element's border.
-    text-align: center; // Center the text inside an element.
     text-transform: uppercase; // Transforms text to uppercase.
+    align-items: center;
 
+    i {
+        margin-left: 12px;
+        margin-right: -4px;
+    }
 }
 
 .middle-buttons a:first-child {
