--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -31,51 +31,66 @@ $shadow           : 0px 3px 35px rgba(0, 0, 0, .1);
 
 //////// Colour variables ////////
 
-$background-primary       : $dark-ish-blue;
-$background-secondary     : $darker-blue;
+$background-primary         : $dark-ish-blue;
+$background-secondary       : $darker-blue;
 
-$top-text-colour          : $dark-blue;
-$top-btn-colour           : $white;
-$top-btn-1                : $yellow-2;
-$top-btn-2                : $neutral-blue;
-$top-btn-3                : $green-2;
-$top-btn-4                : $red;
-$top-btn-5                : $purple;
-$top-btn-6                : $pink;
-$top-btn-7                : $orange;
-$top-btn-effect           : $white;
-$top-box-1-effect         : $grey;
-$top-box-2-effect         : $neutral-blue;
-$top-box-3-effect         : $green-2;
-$top-box-4-effect         : $red;
-$top-box-5-effect         : $purple;
-$top-box-6-effect         : $pink;
-$top-box-7-effect         : $orange;
+$top-text-colour            : $dark-blue;
+$top-btn-colour             : $white;
+$top-btn-1                  : $yellow-2;
+$top-btn-2                  : $neutral-blue;
+$top-btn-3                  : $green-2;
+$top-btn-4                  : $red;
+$top-btn-5                  : $purple;
+$top-btn-6                  : $pink;
+$top-btn-7                  : $orange;
+$top-btn-effect             : $white;
+$top-icon                   : $white;
+$top-icon-background-effect : $white;
+$top-box-1-effect           : $grey;
+$top-icon-1-background      : $grey;
+$top-icon-1-effect          : $grey;
+$top-box-2-effect           : $neutral-blue;
+$top-icon-2-background      : $neutral-blue;
+$top-icon-2-effect          : $neutral-blue;
+$top-box-3-effect           : $green-2;
+$top-icon-3-background      : $green-2;
+$top-icon-3-effect          : $green-2;
+$top-box-4-effect           : $red;
+$top-icon-4-background      : $red;
+$top-icon-4-effect          : $red;
+$top-box-5-effect           : $purple;
+$top-icon-5-background      : $purple;
+$top-icon-5-effect          : $purple;
+$top-box-6-effect           : $pink;
+$top-icon-6-background      : $pink;
+$top-icon-6-effect          : $pink;
+$top-box-7-effect           : $orange;
+$top-icon-7-background      : $orange;
+$top-icon-7-effect          : $orange;
 
+$mid-text-colour            : $white;
+$mid-btn-1-background       : $even-darker-blue;
+$mid-btn-2-background       : $blue;
+$mid-btn-3-background       : $green;
+$mid-btn-1-hover            : $darkest-blue;
+$mid-btn-2-hover            : $hover-blue;
+$mid-btn-3-hover            : $hover-green;
 
-$mid-text-colour          : $white;
-$mid-btn-1-background     : $even-darker-blue;
-$mid-btn-2-background     : $blue;
-$mid-btn-3-background     : $green;
-$mid-btn-1-hover          : $darkest-blue;
-$mid-btn-2-hover          : $hover-blue;
-$mid-btn-3-hover          : $hover-green;
+$footer-text-colour         : $white;
 
-$footer-text-colour       : $white;
+$footer-bottom-text-colour  : $white;
 
-$footer-bottom-text-colour: $white;
+$client                     : $teal-grey;
 
-$client                   : $teal-grey;
+$star                       : $yellow;
 
-$star                     : $yellow;
+$logo-1-hover               : $facebook;
+$logo-2-hover               : $linkedin;
+$logo-3-hover               : $x;
+$logo-4-hover               : $instagram;
 
-$logo-1-hover             : $facebook;
-$logo-2-hover             : $linkedin;
-$logo-3-hover             : $x;
-$logo-4-hover             : $instagram;
-
-$border                   : $white-red;
+$border                     : $white-red;
 
 //////// Box Shadow ////////
 
-$box-shadow               : $shadow;
+$box-shadow                 : $shadow;
